Fixed list icons not showing up

--- a/sass/themes/coffee.scss
+++ b/sass/themes/coffee.scss
@@ -257,10 +257,10 @@ body {
 						vertical-align: middle;
 					}
 					.delete {
-						background: url('../../images/remove.png') no-repeat 0 0;
+						background: url(../../images/whitesprite.png) no-repeat 0 -120px;
 					}
 					.save {
-						background: url('../../images/ok.png') no-repeat 0 0;
+						background: url(../../images/whitesprite.png) no-repeat 0 -198px;
 					}
 				}
 
